--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ h11==0.16.0
 idna==3.10
 joblib==1.5.2
 numpy==2.3.3
+nvidia-nccl-cu12==2.28.3
 pandas==2.3.3
 pydantic==2.11.10
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
+python-multipart==0.0.20
 pytz==2025.2
 scikit-learn==1.7.2
 scipy==1.16.2
@@ -21,3 +23,4 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
 uvicorn==0.37.0
+xgboost==3.0.5
